trying to fix all