@@ -2,20 +2,17 @@ package bg.uni.fmi.theatre.service;
 
 import bg.uni.fmi.theatre.config.AppLogger;
 import bg.uni.fmi.theatre.config.TheatreProperties;
-import bg.uni.fmi.theatre.vo.Genre;
-import bg.uni.fmi.theatre.domain.Show;
-import bg.uni.fmi.theatre.dto.PageResponse;
-import bg.uni.fmi.theatre.dto.ShowRequest;
-import bg.uni.fmi.theatre.dto.ShowResponse;
-import bg.uni.fmi.theatre.exception.NotFoundException;
-import bg.uni.fmi.theatre.exception.ValidationException;
-import bg.uni.fmi.theatre.repository.ShowRepository;
+import bg.uni.fmi.theatre.domain.*;
+import bg.uni.fmi.theatre.vo.*;
+import bg.uni.fmi.theatre.dto.*;
+import bg.uni.fmi.theatre.exception.*;
+import bg.uni.fmi.theatre.repository.*;
+
 import org.springframework.stereotype.Service;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.stream.Collectors;
 
 /**
  * Service for Show CRUD operations.
@@ -23,19 +20,21 @@ import java.util.concurrent.atomic.AtomicLong;
  * the {@link bg.uni.fmi.theatre.domain.Show} entity stays internal.
  *
  * <p>Layering: {@code ShowService} → {@code ShowRepository} only.
+ *
+ * @since Week 06, Task 1
  */
 @Service
 public class ShowService {
 
-    private static final int DEFAULT_PAGE_SIZE = 10;
-
     private final ShowRepository showRepository;
     private final AppLogger logger;
     private final int defaultPageSize;
-
+    // ID generation belongs in the service layer, not the controller
     private final AtomicLong idSeq = new AtomicLong(100);
 
-    public ShowService(ShowRepository showRepository, AppLogger logger, TheatreProperties properties) {
+    public ShowService(ShowRepository showRepository,
+                       AppLogger logger,
+                       TheatreProperties properties) {
         this.showRepository = showRepository;
         this.logger = logger;
         this.defaultPageSize = properties.getDefaultPageSize();
@@ -48,17 +47,15 @@ public class ShowService {
      * @param req the Show data; must not be {@code null}
      * @return the saved Show as a {@link bg.uni.fmi.theatre.dto.ShowResponse}
      * @throws bg.uni.fmi.theatre.exception.ValidationException if {@code req} is {@code null}
+     * @since Week 06, Task 2
      */
     public ShowResponse addShow(ShowRequest req) {
-        if (req == null) {
-            throw new ValidationException("show must not be null");
-        }
-        Show show = new Show(idSeq.getAndIncrement(), req.getTitle(), req.getDescription(), req.getGenre(),
-            req.getDurationMinutes(), req.getAgeRating());
+        if (req == null) throw new ValidationException("Show must not be null");
+        Show show = new Show(idSeq.getAndIncrement(), req.getTitle(), req.getDescription(),
+                req.getGenre(), req.getDurationMinutes(), req.getAgeRating());
         logger.debug("Adding show: " + show.getTitle());
         Show saved = showRepository.save(show);
         logger.info("Show added: [" + saved.getId() + "] " + saved.getTitle());
-
         return ShowResponse.from(saved);
     }
 
@@ -69,12 +66,19 @@ public class ShowService {
      * @param id must not be {@code null}
      * @return the matching {@link bg.uni.fmi.theatre.dto.ShowResponse}
      * @throws bg.uni.fmi.theatre.exception.NotFoundException if no Show exists for {@code id}
+     * @since Week 06, Task 1
      */
     public ShowResponse getShowById(Long id) {
-        if (id == null) {
-            throw new ValidationException("id must not be null");
-        }
+        if (id == null) throw new ValidationException("id must not be null");
+        logger.debug("Fetching show by id: " + id);
 
+//        return showRepository.findById(id).orElseThrow( () -> {
+//
+//            logger.error("No element");
+//            return new NotFoundException("ts");
+//                }
+//        );
+        // conversion inside controller
         return showRepository.findById(id).map(ShowResponse::from).orElseThrow(() -> {
             logger.error("Show not found: id=" + id);
             return new NotFoundException("Show", id);
@@ -83,37 +87,11 @@ public class ShowService {
 
     /**
      * Optionally returns a Show; returns {@link java.util.Optional#empty()} instead of throwing when absent.
+     *
+     * @since Week 06, Task 1
      */
     public Optional<ShowResponse> findShowById(Long id) {
         return showRepository.findById(id).map(ShowResponse::from);
-    }
-
-    /**
-     * Returns all Shows without pagination.
-     */
-    public List<ShowResponse> getAllShows() {
-        logger.trace("getAllShows called");
-        return showRepository.findAll().stream()
-            .map(ShowResponse::from)
-            .toList();
-    }
-
-    /**
-     * Replaces all mutable fields of an existing Show (fetch → mutate → save).
-     *
-     * @throws bg.uni.fmi.theatre.exception.NotFoundException if no Show exists for {@code id}
-     */
-    public ShowResponse updateShow(Long id, ShowRequest req) {
-
-        Show toUpdate = showRepository.findById(id).orElseThrow(() -> new NotFoundException("Show", id));
-        toUpdate.setTitle(req.getTitle());
-        toUpdate.setDescription(req.getDescription());
-        toUpdate.setGenre(req.getGenre());
-        toUpdate.setDurationMinutes(req.getDurationMinutes());
-        toUpdate.setAgeRating(req.getAgeRating());
-        logger.info("Show updated: id=" + id);
-
-        return ShowResponse.from(showRepository.save(toUpdate));
     }
 
     /**
@@ -124,30 +102,27 @@ public class ShowService {
      * @param genre genre filter (null = all genres)
      * @param page zero-based page index; must be &gt;= 0
      * @param size results per page; must be &gt; 0
+     * @since Week 06, Task 4
      */
     public PageResponse<ShowResponse> searchShows(String titleQuery, Genre genre, int page, int size) {
-        if (page < 0) {
-            throw new ValidationException("page must not be negative");
-        } else if (size <= 0) {
-            throw new ValidationException("size must be positive");
-        }
-
+        if (page < 0) throw new ValidationException("page must not be negative");
+        if (size <= 0) throw new ValidationException("size must be positive");
         logger.debug("Searching shows — title='" + titleQuery + "', genre=" + genre + ", page=" + page);
 
         List<ShowResponse> allResults = showRepository.findAll().stream()
-            .filter(s -> titleQuery == null || titleQuery.isBlank()
-                || s.getTitle().toLowerCase().contains(titleQuery.toLowerCase()))
-            .filter(s -> genre == null || genre.equals(s.getGenre()))
-            .sorted(Comparator.comparing(Show::getTitle))
-            .map(ShowResponse::from)
-            .toList();
+                .filter(s -> titleQuery == null || titleQuery.isBlank()
+                        || s.getTitle().toLowerCase().contains(titleQuery.toLowerCase()))
+                .filter(s -> genre == null || genre.equals(s.getGenre()))
+                .sorted(Comparator.comparing(Show::getTitle))
+                .map(ShowResponse::from)
+                .collect(Collectors.toList());
 
         long total = allResults.size();
         logger.info("Search returned " + total + " total results");
         int fromIndex = page * size;
         List<ShowResponse> pageContent = fromIndex >= allResults.size()
-            ? List.of() : allResults.subList(fromIndex, Math.min(fromIndex + size, allResults.size()));
-
+                ? List.of()
+                : allResults.subList(fromIndex, Math.min(fromIndex + size, allResults.size()));
         return new PageResponse<>(pageContent, page, size, total);
     }
 
@@ -156,9 +131,38 @@ public class ShowService {
     }
 
     /**
+     * Returns all Shows without pagination.
+     *
+     * @since Week 06, Task 1
+     */
+    public List<ShowResponse> getAllShows() {
+        logger.trace("getAllShows called");
+        return showRepository.findAll().stream().map(ShowResponse::from).toList();
+    }
+
+    /**
+     * Replaces all mutable fields of an existing Show (fetch → mutate → save).
+     *
+     * @throws bg.uni.fmi.theatre.exception.NotFoundException if no Show exists for {@code id}
+     * @since Week 06, Task 2
+     */
+    public ShowResponse updateShow(Long id, ShowRequest req) {
+        Show existing = showRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Show", id));
+        existing.setTitle(req.getTitle());
+        existing.setDescription(req.getDescription());
+        existing.setGenre(req.getGenre());
+        existing.setDurationMinutes(req.getDurationMinutes());
+        existing.setAgeRating(req.getAgeRating());
+        logger.info("Show updated: id=" + id);
+        return ShowResponse.from(showRepository.save(existing));
+    }
+
+    /**
      * Deletes a Show by its identifier.
      *
      * @throws bg.uni.fmi.theatre.exception.NotFoundException if no Show exists for {@code id}
+     * @since Week 06, Task 2
      */
     public void deleteShow(Long id) {
         showRepository.findById(id).orElseThrow(() -> new NotFoundException("Show", id));
